--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Face detection on the browser using javascript !</title>
     <script defer src="face-api.min.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
-  <script src="https://cdn.jsdelivr.net/npm/face-api.js"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script> -->
+  <!-- <script src="https://cdn.jsdelivr.net/npm/face-api.js"></script> -->
     <script defer src="script.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
