--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div> <button onclick="capture()" style="background-color: brown">hellow</button></div>
+    <div> <button onclick="capture()" style="background-color: brown">capture</button></div>
     <video id="video" width="1280" height="450" autoplay>
 
    
